# serial-txiki-module

./: .gitignore  LICENCE  README.md  TODO.md  bun.lockb  meson.build  module.json  package.json  tsconfig.json
.github/workflows/: prepare-module.yaml
scripts/: bundle.ts  runtime.ts
src/dev/: main.cpp
src/native/: module.c  module.cpp  module.h  sow.cpp  sow.h
src/ts/: index.ts
tests/: test-[module]-0.js
